# advertools

./: .flake8  .pre-commit-config.yaml  =0.0.25  README.rst  output.jl  pyproject.toml  setup.py
advertools/: __init__.py  _yt_helpers.py  ad_create.py  ad_from_string.py  cli.py  extract.py  header_spider.py  knowledge_graph.py  kw_generate.py  logs.py  plw_spider.py  regex.py  reverse_dns_lookup.py  robotstxt.py  screenshot_spider.py  serp.py  sitemaps.py  spider.py  stopwords.py  twitter.py  url_builders.py  urlytics.py  word_frequency.py  word_tokenize.py  youtube.py
advertools/code_recipes/: example_crawl_1.jl  proxy-list.txt  screenshot.py  spider_strategies copy.py  spider_strategies.py
advertools/code_recipes/output/: output.jl
advertools/plw_screenshots/: output.jl
docs/_build/html/: advertools.code_recipes.html
haipproxy/: crawler_booter.py
tests/: test_ad_create.py  test_ad_from_string.py  test_crawl.py  test_crawl_or_not.py  test_emoji.py  test_extract.py  test_header_spider.py  test_kw_generate.py  test_logs.py  test_reverse_dns_lookup.py  test_robotstxt.py  test_serp.py  test_sitemaps.py  test_spider.py  test_twitter.py  test_url_builders.py  test_urlytics.py  test_word_frequency.py  test_word_tokenize.py  test_youtube.py
